# old-gentroid-frameworks-base

core/java/android/app/: Activity.java  ActivityManager.java  ActivityManagerLocal.java  ActivityThread.java  Application.java  ApplicationPackageManager.java  ContextLocal.java  LoadedApk.java  ResourcesManager.java  SharedPreferencesImpl.java  UiAutomation.java  UiAutomationConnection.java
core/java/android/content/: ContentResolver.java
core/java/android/content/pm/: PackageManagerLocal.java
core/java/android/ddm/: DdmHandleViewDebug.java
core/java/android/hardware/display/: DisplayManager.java  DisplayManagerLocal.java  VirtualDisplay.java
core/java/android/net/: SSLCertificateSocketFactory.java
core/java/android/net/http/: AndroidHttpClient.java
core/java/android/os/: ServiceManager.java
core/java/android/provider/: Settings.java
core/java/android/speech/tts/: EventLogger.java
core/java/android/text/: Layout.java
core/java/android/view/: Choreographer.java  Display.java  GLES20Canvas.java  HardwareRenderer.java  IWindow.aidl  IWindowManager.aidl  IWindowSession.aidl  Surface.java  SurfaceView.java  View.java  ViewConfiguration.java  ViewDebug.java  ViewRootImpl.java  WaylandClient.java  Window.java  WindowManager.java  WindowManagerLocal.java  WindowSessionLocal.java
core/java/android/view/accessibility/: AccessibilityManager.java
core/java/android/widget/: TextView.java
core/java/com/android/internal/view/: BaseIWindow.java  RotationPolicy.java
core/jni/: AndroidRuntime.cpp  CMakeLists.txt  Time.cpp  TimeUtils.h  WaylandClient.cpp  WaylandClient.h  android_app_NativeActivity.cpp  android_app_backup_FullBackup.cpp  android_database_CursorWindow.cpp  android_database_SQLiteConnection.cpp  android_database_SQLiteGlobal.cpp  android_opengl_EGL14.cpp  android_opengl_EGLExt.cpp  android_os_Parcel.cpp  android_os_Parcel.h  android_os_SystemProperties.cpp  android_os_Trace.cpp  android_util_AssetManager.cpp  android_util_Binder.cpp  android_util_Binder.h  android_util_Process.cpp  android_view_DisplayEventReceiver.cpp  android_view_GLES20Canvas.cpp  android_view_GLES20DisplayList.cpp  android_view_GraphicBuffer.cpp  android_view_HardwareRenderer.cpp  android_view_InputEventReceiver.cpp  android_view_Wayland.cpp  com_android_internal_content_NativeLibraryHelper.cpp  com_android_internal_net_NetworkStatsFactory.cpp  com_android_internal_os_Zygote.cpp  com_google_android_gles_jni_EGLImpl.cpp  com_google_android_gles_jni_GLImpl.cpp
core/jni/android/graphics/: Bitmap.cpp  BitmapFactory.cpp  BitmapRegionDecoder.cpp  Canvas.cpp  ColorFilter.cpp  CreateJavaOutputStreamAdaptor.cpp  Graphics.cpp  LayerRasterizer.cpp  MaskFilter.cpp  Matrix.cpp  Paint.cpp  Picture.cpp  Region.cpp  Shader.cpp  TextLayoutCache.cpp  TextLayoutCache.h  YuvToJpegEncoder.cpp
core/jni/android/graphics/pdf/: PdfDocument.cpp
core/jni/android/opengl/: util.cpp
